--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="assets/style.css"> <!-- Link to the CSS file -->
 </head>
 <body>
     <header>
         <h1>Weather Dashboard</h1>
-    </header>
-    <main>
         <form id="search-form">
-            <input type="text" id="city-input" placeholder="Enter city name">
+            <input type="text" id="city-input" placeholder="Enter a city">
             <button type="submit">Search</button>
         </form>
-        <section id="current-conditions">
-            <!-- Display current weather conditions here -->
+    </header>
+    <main>
+        <section id="current-weather">
+            <!-- Current weather data will be displayed here -->
         </section>
         <section id="forecast">
-            <!-- Display 5-day forecast here -->
+            <!-- 5-day forecast data will be displayed here -->
         </section>
         <section id="search-history">
-            <!-- Display search history here -->
+            <!-- Search history will be displayed here -->
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
-```
