--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             <!-- Search history will be displayed here -->
         </section>
     </main>
-    <script src="assets/script.js"></script>
+    <script src="assets/javascript.js"></script>
 </body>
 </html>
